--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "form-agent",
   "version": "1.0.0",
-  "description": "",
+  "description": "AI agent for generating form JSON schemas conforming to the form-schema.json specification",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
@@ -21,6 +21,8 @@
     "@clack/prompts": "^0.8.0",
     "ai": "^5.0.0",
     "ai-sdk-ollama": "^1.0.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
     "commander": "^12.0.0",
     "diff": "^8.0.2",
     "execa": "^9.6.0",
@@ -53,7 +55,10 @@
   "keywords": [
     "ai",
     "agent",
-    "coding",
+    "form",
+    "json",
+    "schema",
+    "generation",
     "cli",
     "openai"
   ],
